--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="">
 	<div class="">
-		<div class="">© Copyright 2017</div>
+		<div class="">© Copyright {{ site.time | date: "%Y" }}</div>
 		<div class="">
 			<a href="http://twitter.com/GalerieAlpine" class="" original-title="Twitter" title="Follow on Twitter" target="_blank" rel="nofollow">
 				<i class=""></i>
