artists page, tweak menu item

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -23,21 +23,18 @@
 						<li id="" class="">
 							<a class="" href="/">Home<span class=""><i class=""></i></span></a>
 							<ul style="" class="">
-								<li id="" class="">
-									<a class="" href="/about/">About</a>
-								</li>
+								<li id="" class=""><a class="" href="/about/">About</a></li>
+								<li id="" class=""><a class="" href="/association/">Association</a></li>
 							</ul>
 						</li>
 
 						<li id="" class=""><a class="" href="/artists/">Artists<span class=""><i class=""></i></span></a>
 							<ul style="" class="">
-								<li id="" class=""><a class="" href="/artists/sofia-leconte-mitev/">Sofia Leconte Mitev</a></li>
-								<li id="" class=""><a class="" href="/artists/bill-oconnor/">Bill O&#8217;Connor</a></li>
-								<li id="" class=""><a class="" href="/artists/emma-godfrey-pigott/">Emma Godfrey Pigott</a></li>
-								<li id="" class=""><a class="" href="/artists/jezella-pigott/">Jezella Pigott</a></li>
 								<li id="" class=""><a class="" href="/artists/cat-saunders/">Cat Saunders</a></li>
 								<li id="" class=""><a class="" href="/artists/sophie-scott/">Sophie Scott</a></li>
-								<li id="" class=""><a class="" href="/artists/fara-torrance/">Fara Torrance</a></li>
+								<li id="" class=""><a class="" href="/artists/lee-johnson/">Lee Johnson</a></li>
+								<li id="" class=""><a class="" href="/artists/rob-scott/">Rob Scott</a></li>
+								<li id="" class=""><a class="" href="/artists/visiting-artists/">Visting Artists</a></li>
 							</ul>
 						</li>
 
