just about done
TODO:
	- styling
	- Rob bio + photo
	- photography course details
	- association copy + links to docs
	- re-point domain at github

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -40,8 +40,8 @@
 
 						<li id="" class=""><a class="" href="/atelier/">Atelier<span class=""><i class=""></i></span></a>
 							<ul style="" class="">
-								<li id="" class=""><a class="" href="/classes/">Art Classes</a></li>
-								<li id="" class=""><a class="" href="/photography-courses/">Photography Courses</a></li>
+								<li id="" class=""><a class="" href="/atelier/art-classes/">Art Classes</a></li>
+								<li id="" class=""><a class="" href="/atelier/photography/">Photography Courses</a></li>
 							</ul>
 						</li>
 
