--- a/_includes/small_contact.html
+++ b/_includes/small_contact.html
@@ -12,13 +12,13 @@
 							<div class="">
 								<div class="">
 									<a href="http://twitter.com/GalerieAlpine" class="" original-title="Twitter" title="Follow on Twitter" target="_blank" rel="nofollow">
-										<i class=""></i>
+										<i class="">twitter</i>
 									</a>
 									<a href="https://www.facebook.com/Galerie-Alpine-136288323520164" class="" original-title="Facebook" title="Follow on Facebook" target="_blank" rel="nofollow">
-										<i class=""></i>
+										<i class="">facebook</i>
 									</a>
 									<a href="https://www.instagram.com/galeriealpine/" class="" original-title="Instagram" title="Follow on Instagram" target="_blank" rel="nofollow">
-										<i class=""></i>
+										<i class="">instagram</i>
 									</a>
 								</div>
 							</div>
