styling almost done
need to tweak some of the layout, fonts, and make the images in blogs
use a slideshow - however this is 80% of the way there

CSS sourced from http://getskeleton.com

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,23 @@
 <head>
 	<meta charset="UTF-8">
-	{% include style.html %}
 	<title>{{ page.title }}</title>
+	<meta name="description" content="Galarie Alpine - Fine Art in the heart of the Alps">
+	<meta name="author" content="">
+
+	<!-- mobile specific metas -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+	<!-- style -->
+	<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="/css/skeleton.css">
+	<link rel="stylesheet" href="/css/custom.css">
+	<link rel="stylesheet" href="/css/github-prettify-theme.css">
+
+	<!-- js -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+	<script src="/js/site.js"></script>
 </head>
