--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -1,55 +1,78 @@
-<div class="">
-	<div class="">
-		<header class="">
-			<div class="" header-version="style2" data-centered="yes" data-resize="no" resize-factor="0.3" data-transparent="no" logo-resize="no">
-				<div class="">
-					<div class="">
-						<div id="">
-							<div class="" data-custom-logo="false">
-								<a href="/" rel="home" title="Galerie Alpine">
-									<img src="/img/GA-logo-72dpi-web.png" alt="Galerie Alpine" title="Galerie Alpine" class="">
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</header>
+<section class="header">
+	<a href="/" rel="home" title="Galerie Alpine">
+		<img src="/img/GA-logo-72dpi-web.png" alt="Galerie Alpine" title="Galerie Alpine" class="">
+	</a>
+</section>
 
-		<div class="">
-			<div class="">
-				<nav id="" class="">
-					<ul id="" class="">
-						<li id="" class="">
-							<a class="" href="/">Home<span class=""><i class=""></i></span></a>
-							<ul style="" class="">
-								<li id="" class=""><a class="" href="/about/">About</a></li>
-								<li id="" class=""><a class="" href="/association/">Association</a></li>
-							</ul>
-						</li>
-
-						<li id="" class=""><a class="" href="/artists/">Artists<span class=""><i class=""></i></span></a>
-							<ul style="" class="">
-								<li id="" class=""><a class="" href="/artists/cat-saunders/">Cat Saunders</a></li>
-								<li id="" class=""><a class="" href="/artists/sophie-scott/">Sophie Scott</a></li>
-								<li id="" class=""><a class="" href="/artists/lee-johnson/">Lee Johnson</a></li>
-								<li id="" class=""><a class="" href="/artists/rob-scott/">Rob Scott</a></li>
-								<li id="" class=""><a class="" href="/artists/visiting-artists/">Visting Artists</a></li>
-							</ul>
-						</li>
-
-						<li id="" class=""><a class="" href="/atelier/">Atelier<span class=""><i class=""></i></span></a>
-							<ul style="" class="">
-								<li id="" class=""><a class="" href="/atelier/art-classes/">Art Classes</a></li>
-								<li id="" class=""><a class="" href="/atelier/photography/">Photography Courses</a></li>
-							</ul>
-						</li>
-
-						<li id="" class=""><a class="" href="/blog/">Blog</a></li>
-						<li id="" class=""><a class="" href="/contact/">Contact</a></li>
-					</ul>
-				</nav>
-			</div>
+<div class="navbar-spacer"></div>
+<nav class="navbar">
+  <div class="container">
+	<ul class="navbar-list">
+	  <li class="navbar-item"><a class="navbar-link" href="/about/">About</a></li>
+	  <li class="navbar-item">
+		<a class="navbar-link" href="#" data-popover="#artistNavPopover">Artists</a>
+		<div id="artistNavPopover" class="popover">
+		  <ul class="popover-list">
+			<li class="popover-item">
+			  <a class="popover-link" href="/artists/cat-saunders/">Cat Saunders</a>
+			</li>
+			<li class="popover-item">
+			  <a class="popover-link" href="/artists/sophie-scott/">Sophie Scott</a>
+			</li>
+			<li class="popover-item">
+			  <a class="popover-link" href="/artists/lee-johnson/">Lee Johnson</a>
+			</li>
+			<li class="popover-item">
+			  <a class="popover-link" href="/artists/rob-scott/">Rob Scott</a>
+			</li>
+			<li class="popover-item">
+			  <a class="popover-link" href="/artists/visiting-artists/">Visiting Artists</a>
+			</li>
+		  </ul>
 		</div>
-	</div>
-</div>
+	  </li>
+	  <li class="navbar-item">
+		<a class="navbar-link" href="#" data-popover="#atelierNavPopover">Atelier</a>
+		<div id="atelierNavPopover" class="popover">
+		  <ul class="popover-list">
+			<li class="popover-item">
+			  <a class="popover-link" href="/atelier/art-classes/">Art Classes</a>
+			</li>
+			<li class="popover-item">
+			  <a class="popover-link" href="/atelier/photography/">Photograpy Courses</a>
+			</li>
+		  </ul>
+		</div>
+	  </li>
+	  <li class="navbar-item"><a class="navbar-link" href="/blog/">Blog</a></li>
+	  <li class="navbar-item"><a class="navbar-link" href="/contact/">Contact</a></li>
+
+	  <li class="navbar-icons">
+	<a class="navbar-icon" href="mailto:info@galeriealpine.com" class="" original-title="email" title="send us an email">
+		<img src="/img/social/if_mail_678145.png" width="20px" />
+	</a>
+
+	  </li>
+	  <li class="navbar-icons">
+	<a class="navbar-icon" href="http://twitter.com/GalerieAlpine" class="" original-title="Twitter" title="Follow on Twitter" target="_blank" rel="nofollow">
+		<img src="/img/social/if_twitter_2136496.png" width="20px" />
+	</a>
+
+	  </li>
+	  <li class="navbar-icons">
+	<a class="navbar-icon" href="https://www.facebook.com/Galerie-Alpine-136288323520164" class="" original-title="Facebook" title="Follow on Facebook" target="_blank" rel="nofollow">
+		<img src="/img/social/if_facebook_112689.png" width="20px" />
+	</a>
+
+	  </li>
+	  <li class="navbar-icons">
+	<a class="navbar-icon" href="https://www.instagram.com/galeriealpine/" class="" original-title="Instagram" title="Follow on Instagram" target="_blank" rel="nofollow">
+		<img src="/img/social/if_instagram-2048-black_167679.png" width="20px" />
+	</a>
+
+	  </li>
+
+	</a>
+	</ul>
+  </div>
+</nav>
