--- a/_includes/slides.html
+++ b/_includes/slides.html
@@ -1,5 +1,5 @@
 {% for i in page.images %}
 <div class="slide">
-<img src="{{ page.image_dir }}{{ i }}" alt="{{ i }}" />
+	<img class="slide" src="{{ page.image_dir }}{{ i }}" alt="{{ i }}" />
 </div>
 {% endfor %}
