--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -54,7 +54,7 @@
 
 	  </li>
 	  <li class="navbar-icons">
-	<a class="navbar-icon" href="http://twitter.com/GalerieAlpine" class="" original-title="Twitter" title="Follow on Twitter" target="_blank" rel="nofollow">
+	<a class="navbar-icon" href="https://twitter.com/GalerieAlpine" class="" original-title="Twitter" title="Follow on Twitter" target="_blank" rel="nofollow">
 		<img src="/img/social/if_twitter_2136496.png" width="20px" />
 	</a>
 
