--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="/css/github-prettify-theme.css">
 
 	<!-- js -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 	<script src="/js/site.js"></script>
 </head>
