tweak CSS and javascript for responsiveness
home page shows latest news and blog posts, will add a few images as
a slide show for that page as well as a little bit of copy

images use slick for slide shows: http://kenwheeler.github.io/slick/
and all image and text content correctly scales when resized

about page now shows Google maps location. add a couple more menu items

TODO:
    - link to GivenGain when we have a campaign on there
    - picture + bio for Rob
    - complete Association page with links to documents
    - fix menu bar to not disappear when scaling or on small screens
    - get images with watermarks
    - create dropbox to allow people to give me content
    - Atelier page needs to be its own and not redirect to blog post
    - (get copy and images for Atelier page from Sophie)
    - Add a google calendar for Atelier classes + contact email link
    - Add images to Atelier photography courses page + more info

once all that is done repoint domains at github or do what is necessary
to have this site be the main one

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -1,13 +1,20 @@
 <section class="header">
-	<a href="/" rel="home" title="Galerie Alpine">
-		<img src="/img/GA-logo-72dpi-web.png" alt="Galerie Alpine" title="Galerie Alpine" class="">
-	</a>
+	<div class="container">
+		<div class="row">
+			<div class="twelve columns">
+			<a href="/" rel="home" title="Galerie Alpine">
+				<img src="/img/GA-logo-72dpi-web.png" alt="Galerie Alpine" title="Galerie Alpine" class="u-max-full-width">
+			</a>
+			</div>
+		</div>
+	</div>
 </section>
 
 <div class="navbar-spacer"></div>
 <nav class="navbar">
   <div class="container">
 	<ul class="navbar-list">
+	  <li class="navbar-item"><a class="navbar-link" href="/">Home</a></li>
 	  <li class="navbar-item"><a class="navbar-link" href="/about/">About</a></li>
 	  <li class="navbar-item">
 		<a class="navbar-link" href="#" data-popover="#artistNavPopover">Artists</a>
@@ -46,33 +53,33 @@
 	  </li>
 	  <li class="navbar-item"><a class="navbar-link" href="/blog/">Blog</a></li>
 	  <li class="navbar-item"><a class="navbar-link" href="/contact/">Contact</a></li>
+	  <li class="navbar-item"><a class="navbar-link" href="/association/">Association</a></li>
 
 	  <li class="navbar-icons">
-	<a class="navbar-icon" href="mailto:info@galeriealpine.com" class="" original-title="email" title="send us an email">
+	<a class="navbar-icon" href="mailto:info@galeriealpine.com" original-title="email" title="send us an email">
 		<img src="/img/social/if_mail_678145.png" width="20px" />
 	</a>
 
 	  </li>
 	  <li class="navbar-icons">
-	<a class="navbar-icon" href="https://twitter.com/GalerieAlpine" class="" original-title="Twitter" title="Follow on Twitter" target="_blank" rel="nofollow">
+	<a class="navbar-icon" href="https://twitter.com/GalerieAlpine" original-title="Twitter" title="Follow on Twitter" target="_blank" rel="nofollow">
 		<img src="/img/social/if_twitter_2136496.png" width="20px" />
 	</a>
 
 	  </li>
 	  <li class="navbar-icons">
-	<a class="navbar-icon" href="https://www.facebook.com/Galerie-Alpine-136288323520164" class="" original-title="Facebook" title="Follow on Facebook" target="_blank" rel="nofollow">
+	<a class="navbar-icon" href="https://www.facebook.com/Galerie-Alpine-136288323520164" original-title="Facebook" title="Follow on Facebook" target="_blank" rel="nofollow">
 		<img src="/img/social/if_facebook_112689.png" width="20px" />
 	</a>
 
 	  </li>
 	  <li class="navbar-icons">
-	<a class="navbar-icon" href="https://www.instagram.com/galeriealpine/" class="" original-title="Instagram" title="Follow on Instagram" target="_blank" rel="nofollow">
+	<a class="navbar-icon" href="https://www.instagram.com/galeriealpine/" original-title="Instagram" title="Follow on Instagram" target="_blank" rel="nofollow">
 		<img src="/img/social/if_instagram-2048-black_167679.png" width="20px" />
 	</a>
-
 	  </li>
 
-	</a>
 	</ul>
   </div>
 </nav>
+<br />
