--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,10 +8,13 @@
 				{% include main_menu.html %}
 
 				{{ content }}
+
+				<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+				<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+				<script type="text/javascript" src="/js/slick.min.js"></script>
+
+				{% include footer.html %}
 			</div>
 		</body>
 
-		<div class="container">
-			{% include footer.html %}
-		</div>
 </html>
