--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,45 @@
 	<link rel="stylesheet" href="/css/skeleton.css">
 	<link rel="stylesheet" href="/css/custom.css">
 	<link rel="stylesheet" href="/css/github-prettify-theme.css">
+	<link rel="stylesheet" type="text/css" href="/css/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/slick-theme.css"/>
 
 	<!-- js -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 	<script src="/js/site.js"></script>
+
+	{% if page.map %}
+	<!-- google map -->
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+	<script>
+		function initialize() {
+			
+			var latlng = new google.maps.LatLng({{ page.map[0] }}, {{ page.map[1] }});
+
+			var mapOptions = {
+				zoom: 16,
+				center: latlng,
+				mapTypeId: google.maps.MapTypeId.ROADMAP
+			}
+
+			var mapCanvas = document.getElementById("map-canvas");
+			mapCanvas.id = "map-canvas";
+			mapCanvas.style.height = "300px";
+
+			var map = new google.maps.Map(
+				mapCanvas,
+				mapOptions
+			);
+
+			var marker = new google.maps.Marker({
+				map: map,
+				title: "{{ page.map[2] }}"
+			});
+
+			marker.setPlace({ location: latlng, query: "{{ page.map[2] }}" });
+		}
+
+		google.maps.event.addDomListener(window, 'load', initialize);
+	</script>
+	{% endif %}
 </head>
