--- a/_includes/slides.html
+++ b/_includes/slides.html
@@ -1,5 +1,13 @@
-{% for i in page.images %}
-<div class="slide">
-	<img class="slide" src="{{ page.image_dir }}{{ i }}" alt="{{ i }}" />
+<div class="row">
+  <div class="twelve columns">
+	<div class="slideshow-container">
+	  <div class="slideshow">
+		{% for i in page.images %}
+		<div class="slide">
+			<img class="u-max-full-width" src="{{ page.image_dir }}{{ i }}" alt="{{ i }}" />
+		</div>
+		{% endfor %}
+	  </div>
+	</div>
+  </div>
 </div>
-{% endfor %}
