add API key for use of Google Maps

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 
 	{% if page.map %}
 	<!-- google map -->
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyDPoL8C8NlJ9vI4ZIWBWYXP5jChfpAsXyU"></script>
 	<script>
 		function initialize() {
 			
