--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -21,6 +21,9 @@
 		<div id="artistNavPopover" class="popover">
 		  <ul class="popover-list">
 			<li class="popover-item">
+			  <a class="popover-link" href="/artists/">All Artists</a>
+			</li>
+			<li class="popover-item">
 			  <a class="popover-link" href="/artists/cat-saunders/">Cat Saunders</a>
 			</li>
 			<li class="popover-item">
