--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -1,24 +1,62 @@
-<img src="/img/artists/Contemplation-e1481967510565-200x200.jpg" />
-<p>Sofia Leconte Mitev</p>
-<p>Works in acrylic and mixed media. Sofia has a unique perspective on her environment.</p>
-<p>Oeuvres en acrylique et technique mixte. Sofia a une perspective unique sur son environnement.</p>
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/Contemplation-e1481967510565-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Sofia Leconte Mitev</h5>
+		<p>Works in acrylic and mixed media. Sofia has a unique perspective on her environment.</p>
+		<p>Oeuvres en acrylique et technique mixte. Sofia a une perspective unique sur son environnement.</p>
+	</div>
+</div>
 
-<img src="/img/artists/WHO-FB-Portrait-200x200.jpg" />
-<p>Bill O'Connor</p>
-<p>Works in oil, often painted on location. Bill brings a spirit of adventure to his paintings.</p>
-<p>Oeuvres en huile peints souvent en plein air. Bill amène un esprit aventureux à ses peintures.</p>
+<hr>
 
-<img src="/img/artists/Chamonix-LacBlanc-Balcons-4123-instagram-200x200.jpg" />
-<p>Emma Godfrey Pigott</p>
-<p>Fine art digital photography. Emma is fascinated by the force of nature.</p>
-<p>Oeuvres de photographie numérique. Emma a une fascination pour la force de la nature.</p>
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/WHO-FB-Portrait-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Bill O'Connor</h5>
+		<p>Works in oil, often painted on location. Bill brings a spirit of adventure to his paintings.</p>
+		<p>Oeuvres en huile peints souvent en plein air. Bill amène un esprit aventureux à ses peintures.</p>
+	</div>
+</div>
 
-<img src="/img/artists/14711548_10157710328210232_5327692004010228824_o-200x200.jpg" />
-<p>Jezella Pigott</p>
-<p>Jezella works in a number of media. Here she presents some of her drawings and screen prints of the natural world.</p>
-<p>Jezella travaille dans plusieurs medias. Ici, elle montre ses dessins et ses sérigraphies de la nature.</p>
+<hr>
 
-<img src="/img/artists/Fara-head-and-shoulders-200x200.jpg" />
-<p>Fara Torrance</p>
-<p>Working in oil and egg tempera, Fara's paintings have a distinctive style and colour palette.</p>
-<p>Oeuvres en huile et tempera. Les peintures de Fara ont un style et une palette très distinctifs.</p>
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/Chamonix-LacBlanc-Balcons-4123-instagram-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Emma Godfrey Pigott</h5>
+		<p>Fine art digital photography. Emma is fascinated by the force of nature.</p>
+		<p>Oeuvres de photographie numérique. Emma a une fascination pour la force de la nature.</p>
+	</div>
+</div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/14711548_10157710328210232_5327692004010228824_o-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Jezella Pigott</h5>
+		<p>Jezella works in a number of media. Here she presents some of her drawings and screen prints of the natural world.</p>
+		<p>Jezella travaille dans plusieurs medias. Ici, elle montre ses dessins et ses sérigraphies de la nature.</p>
+	</div>
+</div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/Fara-head-and-shoulders-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Fara Torrance</h5>
+		<p>Working in oil and egg tempera, Fara's paintings have a distinctive style and colour palette.</p>
+		<p>Oeuvres en huile et tempera. Les peintures de Fara ont un style et une palette très distinctifs.</p>
+	</div>
+</div>
