add a separate menu bar for phones
rather than trying to faff about and make the CSS work for both small
and large devices

tweak slick buttons to show on the images, make sure to get the z-index
values right so they show correctly when opening the menu, etc

TODO:

    Priority:

    - Complete Association page copy
    - Atelier page needs to be its own and not redirect to blog post
	(get copy and images for Atelier page from Sophie)
    - Add a google calendar for Atelier classes + contact email link

    Not so much a priority at the moment:

    - Link to GivenGain when we have a campaign on there
    - Get images with watermarks
    - Create dropbox to allow people to give me content

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -11,6 +11,34 @@
 </section>
 
 <div class="navbar-spacer"></div>
+
+<!-- menu for small screens -->
+<nav class="phoneNavbar">
+  <div id="phone_menuToggle">
+    <!--
+      A fake / hidden checkbox is used as click reciever,
+      so you can use the :checked selector on it.
+    -->
+    <input type="checkbox" />
+    <!-- Some spans to act as a hamburger -->
+    <span></span>
+    <span></span>
+    <span></span>
+    <!--
+      Too bad the menu has to be inside of the button
+      but hey, it's pure CSS magic.
+    -->
+    <ul id="phone_menu">
+      <a class="navbar-link" href="/blog/"><li>Blog</li></a>
+      <a class="popover-link" href="/about/"><li>The Gallery</li></a>
+      <a class="popover-link" href="/contact/"><li>Contact</li></a>
+      <a class="popover-link" href="/artists/"><li>Artists</li></a>
+      <a class="popover-link" href="/atelier/art-classes/"><li>Art Classes</li></a>
+    </ul>
+  </div>
+</nav>
+
+<!-- menu for bigger screens -->
 <nav class="navbar">
   <div class="container">
 	<ul class="navbar-list">
