--- a/css/custom.css
+++ b/css/custom.css
@@ -83,15 +83,88 @@
   left: 5px; }
 img.slide {
   border: 0;
-  max-width: 800px;
-}
+  max-width: 800px; }
 img.blog {
   border: 0;
-  max-width: 800px;
-}
+  max-width: 800px; }
+.navbar {
+  display: none; }
+
+/*
+	START PHONE MENU BAR
+	sourced from: https://codepen.io/erikterwan/pen/EVzeRP
+ */
+#phone_menuToggle {
+  display: block;
+  position: relative;
+  top: 10px;
+  left: 10px;
+  z-index: 99;
+  -webkit-user-select: none;
+  user-select: none; }
+#phone_menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 99; /* and place it over the hamburger */
+  -webkit-touch-callout: none; }
+#phone_menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #cdcdcd;
+  border-radius: 3px;
+  z-index: 98;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease; }
+#phone_menuToggle span:first-child {
+  transform-origin: 0% 0%; }
+#phone_menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%; }
+#phone_menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323; }
+#phone_menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2); }
+#phone_menuToggle input:checked ~ span:nth-last-child(2) {
+  opacity: 1;
+  transform: rotate(-45deg) translate(0, -1px); }
+#phone_menu {
+  position: absolute;
+  width: 200px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); }
+#phone_menu li {
+  padding: 5px 0;
+  font-size: 22px; }
+#phone_menuToggle input:checked ~ ul {
+  transform: scale(1.0, 1.0);
+  opacity: 1; }
+/* END PHONE MENU BAR */
+
 
 /* Larger than phone */
 @media (min-width: 550px) {
+  .phoneNavbar {
+    display: none; }
   .header {
     margin-top: 2rem;
     margin-bottom: 2rem; }
