--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,12 @@
+body {
+  text-align:justify; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-align:left; }
 .container {
   max-width: 800px; }
 .header {
