--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -28,6 +28,20 @@
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.googleCalendar{
+  position: relative;
+  height: 0;
+  width: 100%;
+  padding-bottom: 100% ;
+}
+
+.googleCalendar iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .container {
   position: relative;
   width: 100%;
