fix typo in main menu

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -92,7 +92,7 @@
 			  <a class="popover-link" href="/atelier/art-classes/">Art Classes</a>
 			</li>
 			<li class="popover-item">
-			  <a class="popover-link" href="/atelier/photography/">Photograpy Courses</a>
+			  <a class="popover-link" href="/atelier/photography/">Photography Courses</a>
 			</li>
 		  </ul>
 		</div>
