update index flyer, add Heena to visiting_artists

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -60,3 +60,16 @@
 		<p>Oeuvres en huile et tempera. Les peintures de Fara ont un style et une palette très distinctifs.</p>
 	</div>
 </div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/heena-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Heena Sheth</h5>
+		<p>Heena creates knife works in oil, she is an expressionist, realist, and abstract artist.</p>
+		<p>Heena crée des oeuvres en huile, elle est une artiste expressionniste, réaliste et abstraite.</p>
+	</div>
+</div>
