add home link to main menu

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -29,6 +29,7 @@
       but hey, it's pure CSS magic.
     -->
     <ul id="phone_menu">
+      <a class="navbar-link" href="/"><li>Home</li></a>
       <a class="navbar-link" href="/blog/"><li>Blog</li></a>
       <a class="popover-link" href="/about/"><li>The Gallery</li></a>
       <a class="popover-link" href="/contact/"><li>Contact</li></a>
@@ -42,6 +43,7 @@
 <nav class="navbar">
   <div class="container">
 	<ul class="navbar-list">
+	  <li class="navbar-item"><a class="navbar-link" href="/">Home</a></li>
 	  <li class="navbar-item"><a class="navbar-link" href="/blog/">Blog</a></li>
 	  <li class="navbar-item">
 		<a class="navbar-link" href="#" data-popover="#aboutistNavPopover">About</a>
