more visiting artists

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -86,3 +86,29 @@
 		<p>Artiste abstrait travaillant avec de la peinture acrylique en toile lumineuse. Elle apporte des couleurs et des pensées ensemble tandis que la peinture coule dans ses veines.</p>
 	</div>
 </div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/eva-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Eva van Lis</h5>
+		<p>Born in the Netherlands, Eva's painting career has been truly international with extended stays and exhibitions in Africa, America, and England. The paintings of the cattle were inspired from her stay in Texas.</p>
+		<p>Née aux Pays-Bas, la carrière de peinture d'Eva a été vraiment internationale avec des expositions prolongés en Afrique, Amérique, et en Angleterre. Les peintures du bétail ont été inspirées de son séjour au Texas.</p>
+	</div>
+</div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/christine-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Christine Williamson</h5>
+		<p>Christine Williamson was born in Cheshire, England, and grew up in an artistic family. When she came to Switzerland on a ski holiday, she loved it so much that eventually she came to live here permanently. She enjoys travelling round Switzerland discovering the cantons and the beautiful scenery which inspire her to paint every day.</p>
+		<p>Christine Williamson est née à Cheshire en Angleterre. Quand elle est venue en Suisse pour des vacances de ski, elle avait tellement de plaisir que quelques années plus tard elle s’est installée ici indéfiniment. Elle aime voyager pour découvrir tous les cantons suisses et les beaux paysages, une source d’inspiration qui nourrit sa pratique de peinture tous les jours.</p>
+	</div>
+</div>
