add Ildze to artists page

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -99,3 +99,16 @@
 		<p>Christine Williamson est née à Cheshire en Angleterre. Quand elle est venue en Suisse pour des vacances de ski, elle avait tellement de plaisir que quelques années plus tard elle s’est installée ici indéfiniment. Elle aime voyager pour découvrir tous les cantons suisses et les beaux paysages, une source d’inspiration qui nourrit sa pratique de peinture tous les jours.</p>
 	</div>
 </div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/ildze-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Ildze Ose</h5>
+		<p>Ildze is an artist specializing in distinguishing your chalet with naive Swiss or imaginative scenes. Working in oil and acrylic.</p>
+		<p>Ildze est un artiste spécialisé dans la distinction de votre chalet avec des scènes naïves suisses ou imaginatives. Travailler dans l'huile et l'acrylique.</p>
+	</div>
+</div>
