resolve #1 - tweak menu ordering
about comes after home, blog comes last

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -30,11 +30,11 @@
     -->
     <ul id="phone_menu">
       <a class="navbar-link" href="/"><li>Home</li></a>
-      <a class="navbar-link" href="/blog/"><li>Blog</li></a>
-      <a class="popover-link" href="/about/"><li>The Gallery</li></a>
-      <a class="popover-link" href="/contact/"><li>Contact</li></a>
+      <a class="popover-link" href="/about/"><li>About</li></a>
       <a class="popover-link" href="/artists/"><li>Artists</li></a>
       <a class="popover-link" href="/atelier/art-classes/"><li>Art Classes</li></a>
+      <a class="popover-link" href="/contact/"><li>Contact</li></a>
+      <a class="navbar-link" href="/blog/"><li>Blog</li></a>
     </ul>
   </div>
 </nav>
@@ -44,7 +44,6 @@
   <div class="container">
 	<ul class="navbar-list">
 	  <li class="navbar-item"><a class="navbar-link" href="/">Home</a></li>
-	  <li class="navbar-item"><a class="navbar-link" href="/blog/">Blog</a></li>
 	  <li class="navbar-item">
 		<a class="navbar-link" href="#" data-popover="#aboutistNavPopover">About</a>
 		<div id="aboutistNavPopover" class="popover">
@@ -99,6 +98,7 @@
 		  </ul>
 		</div>
 	  </li>
+	  <li class="navbar-item"><a class="navbar-link" href="/blog/">Blog</a></li>
 
 	  <li class="navbar-icons">
 	<a class="navbar-icon" href="mailto:info@galeriealpine.com" original-title="email" title="send us an email">
