resolve #7 - add more images to home page
add a couple of interior shots on the left and right of the banner
header - TODO: need a larger resolution of the logo image so i can make
this full width

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="twelve columns">
 			<a href="/" rel="home" title="Galerie Alpine">
-				<img src="/img/GA-logo-72dpi-web.png" alt="Galerie Alpine" title="Galerie Alpine" class="u-max-full-width">
+				<img src="/img/GA-logo-72dpi-web_interior.png" alt="Galerie Alpine" title="Galerie Alpine" class="u-max-full-width">
 			</a>
 			</div>
 		</div>
