--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -27,9 +27,9 @@
 
     display: block;
 
-    width: 20px;
-    height: 20px;
-    padding: 0;
+    width: 30px;
+    height: 30px;
+    padding: 2px;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
@@ -39,7 +39,7 @@
     color: transparent;
     border: white;
     outline: white;
-    background: transparent;
+    background: grey;
 }
 .slick-prev:hover,
 .slick-prev:focus,
