resolve #8 - add a downloads section
information PDF about the gallery, atelier flyers, and previous artpéro
flyers

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -57,6 +57,9 @@
 			<li class="popover-item">
 			  <a class="popover-link" href="/association/">Association</a>
 			</li>
+			<li class="popover-item">
+			  <a class="popover-link" href="/downloads/">Downloads</a>
+			</li>
 		  </ul>
 		</div>
 	  </li>
