resolve #10 - artist's social and web links

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -3,7 +3,9 @@
 		<img src="/img/artists/Contemplation-e1481967510565-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Sofia Leconte Mitev</h5>
+		<h5>Sofia Leconte Mitev
+			&nbsp;
+		</h5>
 		<p>Works in acrylic and mixed media. Sofia has a unique perspective on her environment.</p>
 		<p>Oeuvres en acrylique et technique mixte. Sofia a une perspective unique sur son environnement.</p>
 	</div>
@@ -16,7 +18,9 @@
 		<img src="/img/artists/WHO-FB-Portrait-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Bill O'Connor</h5>
+		<h5>Bill O'Connor
+			&nbsp;
+		</h5>
 		<p>Works in oil, often painted on location. Bill brings a spirit of adventure to his paintings.</p>
 		<p>Oeuvres en huile peints souvent en plein air. Bill amène un esprit aventureux à ses peintures.</p>
 	</div>
@@ -29,7 +33,12 @@
 		<img src="/img/artists/Chamonix-LacBlanc-Balcons-4123-instagram-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Emma Godfrey Pigott</h5>
+		<h5>Emma Godfrey Pigott
+			&nbsp;
+			<a href="http://www.emmagodfrey.com"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="https://www.instagram.com/emmagodfreyportraiture/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			<a href="mailto:em@emmagodfrey.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
 		<p>Fine art digital photography. Emma is fascinated by the force of nature.</p>
 		<p>Oeuvres de photographie numérique. Emma a une fascination pour la force de la nature.</p>
 	</div>
@@ -42,7 +51,9 @@
 		<img src="/img/artists/Fara-head-and-shoulders-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Fara Torrance</h5>
+		<h5>Fara Torrance
+			&nbsp;
+		</h5>
 		<p>Working in oil and egg tempera, Fara's paintings have a distinctive style and colour palette.</p>
 		<p>Oeuvres en huile et tempera. Les peintures de Fara ont un style et une palette très distinctifs.</p>
 	</div>
@@ -55,7 +66,10 @@
 		<img src="/img/artists/heena-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Heena Sheth</h5>
+		<h5>Heena Sheth
+			&nbsp;
+			<a href="mailto:heenasheth51@hotmail.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
 		<p>Heena creates knife works in oil, she is an expressionist, realist, and abstract artist.</p>
 		<p>Heena crée des oeuvres en huile, elle est une artiste expressionniste, réaliste et abstraite.</p>
 	</div>
@@ -68,7 +82,11 @@
 		<img src="/img/artists/will-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Willemijn van Dijk</h5>
+		<h5>Willemijn van Dijk
+			&nbsp;
+			<a href="http://zilvermijn76.wixsite.com/artbywillemijn"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="mailto:artbywillemijn@gmail.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
 		<p>Abstract artist working with acrylic paint in bold and bright canvas work. She brings colors and thoughts together while the paint flows in her veins.</p>
 		<p>Artiste abstrait travaillant avec de la peinture acrylique en toile lumineuse. Elle apporte des couleurs et des pensées ensemble tandis que la peinture coule dans ses veines.</p>
 	</div>
@@ -81,7 +99,11 @@
 		<img src="/img/artists/eva-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Eva van Lis</h5>
+		<h5>Eva van Lis
+			&nbsp;
+			<a href="http://www.evalis.nl"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="mailto:evalis@live.nl"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
 		<p>Born in the Netherlands, Eva's painting career has been truly international with extended stays and exhibitions in Africa, America, and England. The paintings of the cattle were inspired from her stay in Texas.</p>
 		<p>Née aux Pays-Bas, la carrière de peinture d'Eva a été vraiment internationale avec des expositions prolongés en Afrique, Amérique, et en Angleterre. Les peintures du bétail ont été inspirées de son séjour au Texas.</p>
 	</div>
@@ -94,7 +116,11 @@
 		<img src="/img/artists/christine-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Christine Williamson</h5>
+		<h5>Christine Williamson
+			&nbsp;
+			<a href="http://www.cawilliamson.ch"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="mailto:cawilliamson@bluemail.ch"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
 		<p>Christine Williamson was born in Cheshire, England, and grew up in an artistic family. When she came to Switzerland on a ski holiday, she loved it so much that eventually she came to live here permanently. She enjoys travelling round Switzerland discovering the cantons and the beautiful scenery which inspire her to paint every day.</p>
 		<p>Christine Williamson est née à Cheshire en Angleterre. Quand elle est venue en Suisse pour des vacances de ski, elle avait tellement de plaisir que quelques années plus tard elle s’est installée ici indéfiniment. Elle aime voyager pour découvrir tous les cantons suisses et les beaux paysages, une source d’inspiration qui nourrit sa pratique de peinture tous les jours.</p>
 	</div>
@@ -107,7 +133,12 @@
 		<img src="/img/artists/ildze-200x200.jpg" />
 	</div>
 	<div class="six columns">
-		<h5>Ildze Ose</h5>
+		<h5>Ildze Ose
+			&nbsp;
+			<a href="http://www.art-in-the-alps.com"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="https://www.instagram.com/ildze_ose/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			<a href="mailto:artinthealps@gmail.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
 		<p>Ildze is an artist specializing in distinguishing your chalet with naive Swiss or imaginative scenes. Working in oil and acrylic.</p>
 		<p>Ildze est un artiste spécialisé dans la distinction de votre chalet avec des scènes naïves suisses ou imaginatives. Travailler dans l'huile et l'acrylique.</p>
 	</div>
