some minor image tweaks
make banner as wide as page, add both pages to leaflet preview image,
move Sophie to the start of the artists

TODO: mosaics + slideshows for individual artist pages

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -1,13 +1,11 @@
 <section class="header">
-	<div class="container">
 		<div class="row">
 			<div class="twelve columns">
 			<a href="/" rel="home" title="Galerie Alpine">
-				<img src="/img/GA-logo-72dpi-web_interior.png" alt="Galerie Alpine" title="Galerie Alpine" class="u-max-full-width">
+				<img src="/img/header_banner.jpg" alt="Galerie Alpine" title="Galerie Alpine" class="u-max-full-width">
 			</a>
 			</div>
 		</div>
-	</div>
 </section>
 
 <div class="navbar-spacer"></div>
