ref #9 - add André to visiting artists page

--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -143,3 +143,19 @@
 		<p>Ildze est un artiste spécialisé dans la distinction de votre chalet avec des scènes naïves suisses ou imaginatives. Travailler dans l'huile et l'acrylique.</p>
 	</div>
 </div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/andre-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>André E. Benoit
+			&nbsp;
+			<a href="http://www.andrebenoit-art.com"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+		</h5>
+		<p>André is an artist working in multidimensional mixed media: "What may appear whimsical, distorted, or intentionally anatomically incorrect, is a reflection/function of my belief in the power of Wabi Sabi... the capacity to capture and captivate the viewer with a motion and movement created by balance and asymmetry."</p>
+		<p>André est un artiste spécialisé dans les médias mixtes multidimensionnels: « Ce que sembler capricieux, déformé, ou intentionnellement anatomiquement incorrect, est une réflexion / fonction de ma croyance en la puissance de Wabi Sabi ... la capacité de capturer et captiver le spectateur avec un mouvement et mouvement créés par l'équilibre et l'asymétrie. »</p>
+	</div>
+</div>
