--- a/_includes/visiting_artists.html
+++ b/_includes/visiting_artists.html
@@ -159,3 +159,21 @@
 		<p>André est un artiste spécialisé dans les médias mixtes multidimensionnels: « Ce que sembler capricieux, déformé, ou intentionnellement anatomiquement incorrect, est une réflexion / fonction de ma croyance en la puissance de Wabi Sabi ... la capacité de capturer et captiver le spectateur avec un mouvement et mouvement créés par l'équilibre et l'asymétrie. »</p>
 	</div>
 </div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/vincenzo-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5>Vincenzo Romanelli
+			&nbsp;
+			<a href="https://vincenzoromanelli.org"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+			<a href="https://www.instagram.com/vincenzoromanellisculptor/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			<a href="mailto:info@vincenzo-romanelli.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+		</h5>
+		<p>Florentine born Sculptor Vincenzo Romanelli represents the fifth generation of Romanelli family sculptors down the male line, along with his brother Raffaello. By carving a career as a sculptor, Vincenzo is continuing a family tradition that spans nearly two centuries.</p>
+		<p>Le sculpteur d'origine florentine Vincenzo Romanelli représente la cinquième génération de sculpteurs de la famille Romanelli, avec son frère Raffaello. En sculptant une carrière de sculpteur, Vincenzo perpétue une tradition familiale qui s'étend sur près de deux siècles.</p>
+	</div>
+</div>
